--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-	"name": "user-info-box",
+	"name": "gutenberg-gifs",
 	"version": "1.0.0",
 	"scripts": {
 		"start": "wp-scripts start --mode development",
 		"build": "wp-scripts build --mode production"
 	},
 	"devDependencies": {
-		"@wordpress/api-fetch": "^3.5.0",
-		"@wordpress/blocks": "^6.6.0",
-		"@wordpress/scripts": "^4.0.0"
+		"@wordpress/api-fetch": "^3.23.1",
+		"@wordpress/blocks": "^6.25.2",
+		"@wordpress/scripts": "^4.1.0"
 	}
 }
